--- a/package.json
+++ b/package.json
@@ -54,13 +54,15 @@
         "react-resize-detector": "^9.1.0",
         "react-virtuoso": "^4.6.2",
         "react-wrap-balancer": "^1.0.0",
+        "semver": "6.3.1",
         "sharp": "^0.32.1",
         "swiper": "^10.0.2",
+        "tough-cookie": "4.1.3",
         "ts-node": "^10.9.1",
         "typescript": "^5.2.2",
         "usehooks-ts": "^2.9.1",
         "yarn": "^1.22.19",
-        "zod": "^3.21.4",
+        "zod": "^3.22.4",
         "zustand": "^4.4.4"
     },
     "devDependencies": {
@@ -71,7 +73,7 @@
         "@types/jest": "^29.5.6",
         "@types/lodash.debounce": "^4.0.8",
         "autoprefixer": "^10.4.14",
-        "cypress": "^12.16.0",
+        "cypress": "^13.3.3",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
         "lodash.debounce": "^4.0.8",
